--- a/src/main/resources/com/example/practice/employee_dashboard.fxml
+++ b/src/main/resources/com/example/practice/employee_dashboard.fxml
@@ -7,15 +7,14 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox spacing="20"      style="-fx-background-color: linear-gradient(to bottom, #2C3E50, #4CA1AF);"
-
+<HBox spacing="20" style="-fx-background-color: linear-gradient(to bottom, #2C3E50, #4CA1AF);"
       xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.EmployeeDashboardController">
-
     <children>
-        <VBox spacing="10">
+        <VBox spacing="10" HBox.hgrow="ALWAYS">
             <Label style="-fx-font-size: 24px; -fx-text-fill: white;" text="Employee Dashboard" />
 
             <GridPane hgap="10" vgap="10">
@@ -34,28 +33,32 @@
                 <Button onAction="#handleViewDepartmentEarnings" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View department earnings" GridPane.columnIndex="0" GridPane.rowIndex="8" />
                 <Button onAction="#handleViewAllEmployeesEarnings" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View all employees' earnings" GridPane.columnIndex="0" GridPane.rowIndex="9" />
                 <Button onAction="#handleLogout" style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Log out" GridPane.columnIndex="0" GridPane.rowIndex="10" />
-            <columnConstraints>
-               <ColumnConstraints />
-            </columnConstraints>
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+
+                <columnConstraints>
+                    <ColumnConstraints hgrow="ALWAYS" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                    <RowConstraints vgrow="ALWAYS" />
+                </rowConstraints>
             </GridPane>
         </VBox>
 
-        <VBox spacing="10">
+        <VBox spacing="10" HBox.hgrow="ALWAYS">
+            <padding>
+                <Insets bottom="30" left="30" right="30" top="30" />
+            </padding>
             <Label style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;" text="Result:" />
-            <TextArea fx:id="resultTextArea" editable="false" prefHeight="430.0" prefWidth="622.0" style="-fx-background-color: white; -fx-text-fill: black;" wrapText="true" />
+            <TextArea fx:id="resultTextArea" editable="false" prefHeight="430.0" prefWidth="622.0" style="-fx-background-color: white; -fx-text-fill: black;" wrapText="true" VBox.vgrow="ALWAYS" />
         </VBox>
     </children>
 </HBox>
